edits on index layout, styling, and save button on planner.js

--- a/index.html
+++ b/index.html
@@ -25,57 +25,57 @@
 
                 <div class="container">
                     <div class="row mx-auto">
-                        <div class="col-3-lg col-3-md col-3-sm hour time-block">9 AM</div>
-                        <textarea id="9" class="col-6-lg col-6-md col-6-sm input"></textarea>
-                        <button class="col-3-lg col-3-md col-3-sm saveButton"><i class="far fa-save"></i></button>
+                        <div class="col-3 hour time-block">9 AM</div>
+                        <textarea id="9" class="col-6 input"></textarea>
+                        <button class="col-3 saveButton"><i class="far fa-save"></i></button>
                     </div>
 
                     <div class="row mx-auto">
-                        <div class="col-3-lg col-3-md col-3-sm hour time-block">10 AM</div>
-                        <textarea id="10" class="col-6-lg col-6-md col-6-sm input"></textarea>
-                        <button class="col-3-lg col-3-md col-3-sm saveButton"><i class="far fa-save"></i></button>
+                        <div class="col-3 hour time-block">10 AM</div>
+                        <textarea id="10" class="col-6 input"></textarea>
+                        <button class="col-3 saveButton"><i class="far fa-save"></i></button>
                     </div>
 
                     <div class="row mx-auto">
-                        <div class="col-3-lg col-3-md col-3-sm hour time-block">11 AM</div>
-                        <textarea id="11" class="col-6-lg col-6-md col-6-sm input"></textarea>
-                        <button class="col-3-lg col-3-md col-3-sm saveButton"><i class="far fa-save"></i></button>
+                        <div class="col-3 hour time-block">11 AM</div>
+                        <textarea id="11" class="col-6 input"></textarea>
+                        <button class="col-3 saveButton"><i class="far fa-save"></i></button>
                     </div>
 
                     <div class="row mx-auto">
-                        <div class="col-3-lg col-3-md col-3-sm hour time-block">12 PM</div>
-                        <textarea id="12" class="col-6-lg col-6-md col-6-sm input"></textarea>
-                        <button class="col-3-lg col-3-md col-3-sm saveButton"><i class="far fa-save"></i></button>
+                        <div class="col-3 hour time-block">12 PM</div>
+                        <textarea id="12" class="col-6 input"></textarea>
+                        <button class="col-3 saveButton"><i class="far fa-save"></i></button>
                     </div>
 
                     <div class="row mx-auto">
-                        <div class="col-3-lg col-3-md col-3-sm hour time-block">1 PM</div>
-                        <textarea id="1" class="col-6-lg col-6-md col-6-sm input"></textarea>
-                        <button class="col-3-lg col-3-md col-3-sm saveButton"><i class="far fa-save"></i></button>
+                        <div class="col-3 hour time-block">1 PM</div>
+                        <textarea id="1" class="col-6 input"></textarea>
+                        <button class="col-3 saveButton"><i class="far fa-save"></i></button>
                     </div>
 
                     <div class="row mx-auto">
-                        <div class="col-3-lg col-3-md col-3-sm hour time-block">2 PM</div>
-                        <textarea id="2" class="col-6-lg col-6-md col-6-sm input"></textarea>
-                        <button class="col-3-lg col-3-md col-3-sm saveButton"><i class="far fa-save"></i></button>
+                        <div class="col-3 hour time-block">2 PM</div>
+                        <textarea id="2" class="col input"></textarea>
+                        <button class="col-3 saveButton"><i class="far fa-save"></i></button>
                     </div>
 
                     <div class="row mx-auto">
-                        <div class="col-3-lg col-3-md col-3-sm hour time-block">3 PM</div>
-                        <textarea id="3" class="col-6-lg col-6-md col-6-sm input"></textarea>
-                        <button class="col-3-lg col-3-md col-3-sm saveButton"><i class="far fa-save"></i></button>
+                        <div class="col-3 hour time-block">3 PM</div>
+                        <textarea id="3" class="col-6 input"></textarea>
+                        <button class="col-3 saveButton"><i class="far fa-save"></i></button>
                     </div>
 
                     <div class="row mx-auto">
-                        <div class="col-3-lg col-3-md col-3-sm hour time-block">4 PM</div>
-                        <textarea id="4" class="col-6-lg col-6-md col-6-sm input"></textarea>
-                        <button class="col-3-lg col-3-md col-3-sm saveButton"><i class="far fa-save"></i></button>
+                        <div class="col-3  hour time-block">4 PM</div>
+                        <textarea id="4" class="col-6 input"></textarea>
+                        <button class="col-3 saveButton"><i class="far fa-save"></i></button>
                     </div>
 
                     <div class="row mx-auto">
-                        <div class="col-3-lg col-3-md col-3-sm hour time-block">5 PM</div>
-                        <textarea id="5" class="col-6-lg col-6-md col-6-sm input"></textarea>
-                        <button class="col-3-lg col-3-md col-3-sm saveButton"><i class="far fa-save"></i></button>
+                        <div class="col-3 hour time-block">5 PM</div>
+                        <textarea id="5" class="col-6 input"></textarea>
+                        <button class="col-3 saveButton"><i class="far fa-save"></i></button>
                     </div>
                 </div>
         
