added descriptions on the planner.js functions and index.html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 
     <body>
 
+        <!-- Each block contains the alotted time with a text box for the input -->
+
+        <!-- There are eight blocks for each hours -->
+
+        <!-- A save button is present to store the input in a local storage -->
+
+
                 <div class="container">
                     <div class="row mx-auto">
                         <div class="col-3 hour time-block">9 AM</div>
